fix unopened shift

--- a/src/styles/pos/_main.scss
+++ b/src/styles/pos/_main.scss
@@ -3914,7 +3914,17 @@ ul.has-list {
   }
   button {
     &.bounder {font-size: 18px; min-width: 147px;}
-  }
+  } 
+}
+.unopened-shift-overlay{
+  position: fixed;
+  top: 0;
+  right: 0;  
+  width: 37.8%;
+  height: 100%;
+  background-color: black;
+  opacity: .6;
+  z-index: 9997;
 }
 
 .search-no-result {
